--- a/CSS/general.css
+++ b/CSS/general.css
@@ -7,3 +7,9 @@ body {
   margin: 0;
   background-color: rgb(233, 233, 233);
 }
+
+.pic{
+  width: 220px;
+  height: 220px;
+  border-radius: 110px;
+}
