--- a/CSS/general.css
+++ b/CSS/general.css
@@ -1,66 +1,3 @@
-p {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-body {
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: 3px;
-  margin-right: 3px;
-  background-color: rgb(233, 233, 233);
-}
-
-.pic {
-  width: 220px;
-  height: 220px;
-  float: right;
-}
-
-.school_pic{
-  width: 250px;
-  height: 250px;
-  border-radius: 110px;
-  padding: 15px;
-  float: right;
-}
-
-.pic_1{
-  width: 550px;
-  height: 450px;
-  margin: 30px;
-  border-radius: 15px;
-  float: left;
-}
-
-.pic_2{
-  width: 550px;
-  height: 450px;
-  margin: 15px;
-  border-radius: 16px;
-  float: center;
-}
-
-.button_div{
-  float: left;
-}
-
-.go_to_top{
-  font-size: medium;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #3498db;
-  border-width: 1px;
-  border: solid;
-  border-color: #3498db;
-  border-radius: 6px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-top: 15px;
-}
-
-.button-trans:hover{
-  color: #3498db;
-  background-color: white;
-  transition: 2s;
+.body{
+  margin: 5px;
 }
