--- a/CSS/general.css
+++ b/CSS/general.css
@@ -15,3 +15,14 @@
 .content_footer{
   background-color: #f5f5f5;
 }
+
+.my_skill{
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+
+}
+
+.skill_div{
+  background-color: #29575e;
+}
