I don't know what i did

--- a/text.css
+++ b/text.css
@@ -1,9 +1,9 @@
 .content_header{
-  font-size: 42px;
+  font-size: 4.2rem;
   font-family: 'Roboto Slab', serif;
 }
 
 .text{
-  font-size: 30px;
+  font-size: 3rem;
   font-family: 'Roboto Mono', monospace;
 }
